--- a/alojamientos.html
+++ b/alojamientos.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administración de Alojamientos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="alojamientos.css">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/alojamientos.css">
 </head>
 <body>
 
     <header class="header">
         <div class="container header-container">
             <div class="logo-container">
-                <img src="img/logo.png" alt="Logo El Paraíso" style="max-width: 100px;">
-                <a href="/" class="logo">El Paraíso</a>
+                <img src="/img/logo.png" alt="Logo El Paraíso" style="max-width: 100px;">
+                <a href="/index.html" class="logo">El Paraíso</a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/" class="active">Inicio</a></li>
+                    <li><a href="/index.html" class="active">Inicio</a></li>
                     <li><a href="/alojamientos">Alojamientos</a></li>
                     <li><a href="/Experiencias">Experiencias</a></li>
                     <li><a href="/contact">Contacto</a></li>
@@ -83,6 +83,6 @@
             </form>
         </div>
     </div>
-    <script src="alojamientos.js"></script>
+    <script src="/js/alojamientos.js"></script>
 </body>
 </html>
