--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Paraíso - Alojamientos de Lujo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
         <div class="container header-container">
             <div class="logo-container">
-                <img src="img/logo.png" alt="Logo El Paraíso" style="max-width: 100px;">
-                <a href="/" class="logo">El Paraíso</a>
+                <img src="/img/logo.png" alt="Logo El Paraíso" style="max-width: 100px;">
+                <a href="/index.html" class="logo">El Paraíso</a>
 
             </div>
             <nav class="main-nav">
                 <ul>
                     <li><a href="/index.html" class="active">Inicio</a></li>
-                    <li><a href="/alojamientos">Alojamientos</a></li>
+                    <li><a href="/alojamientos.html">Alojamientos</a></li>
                     <li><a href="/Experiencias">Experiencias</a></li>
-                    <li><a href="/contact">Contacto</a></li>
+                    <li><a href="/contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,17 +41,17 @@
             <h2 class="section-title">Nuestros Destinos</h2>
             <div class="featured-grid">
                 <div class="featured-item">
-                    <img src="img/banner-02.jpg" alt="Villa de Lujo">
+                    <img src="/img/banner-02.jpg" alt="Villa de Lujo">
                     <h3>Villas de Lujo</h3>
                     <p>Disfruta de la máxima privacidad y confort en nuestras exclusivas villas.</p>
                 </div>
                 <div class="featured-item">
-                    <img src="img/banner-03.jpg" alt="Rancho">
+                    <img src="/img/banner-03.jpg" alt="Rancho">
                     <h3>Ranchos</h3>
                     <p>Experimenta la vida rural con todas las comodidades modernas.</p>
                 </div>
                 <div class="featured-item">
-                    <img src="img/deal-03.jpg" alt="Hotel">
+                    <img src="/img/deal-03.jpg" alt="Hotel">
                     <h3>Hoteles</h3>
                     <p>Hospédate en los mejores hoteles con servicio de primera clase.</p>
                 </div>
@@ -69,10 +69,10 @@
                 <div class="footer-nav">
                     <h3>Enlaces Rápidos</h3>
                     <ul>
-                        <li><a href="/">Inicio</a></li>
-                        <li><a href="/data">Alojamientos</a></li>
+                        <li><a href="/index.html">Inicio</a></li>
+                        <li><a href="/alojamientos.html">Alojamientos</a></li>
                         <li><a href="/Experiencias">Experiencias</a></li>
-                        <li><a href="/contact">Contacto</a></li>
+                        <li><a href="/contact/contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
