--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - El Paraíso</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header class="header">
@@ -12,14 +12,14 @@
             <div class="logo-container">
          
                 <img src="/img/logo.png" alt="Reservación Hoteles y Ranchos" class="logo-img">
-                <a href="/" class="logo">El Paraíso</a>
+                <a href="/index.html" class="logo">El Paraíso</a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/">Inicio</a></li>
-                    <li><a href="/alojamientos">Alojamientos</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/alojamientos.html">Alojamientos</a></li>
                     <li><a href="/experiencias">Experiencias</a></li>
-                    <li><a href="/contacto" class="active">Contacto</a></li>
+                    <li><a href="/contact/contact.html" class="active">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -118,10 +118,10 @@
                 <div class="footer-nav">
                     <h3>Enlaces Rápidos</h3>
                     <ul>
-                        <li><a href="/">Inicio</a></li>
-                        <li><a href="/data">Alojamientos</a></li>
+                        <li><a href="/index.html">Inicio</a></li>
+                        <li><a href="/alojamientos.html">Alojamientos</a></li>
                         <li><a href="/experiencias">Experiencias</a></li>
-                        <li><a href="/contacto">Contacto</a></li>
+                        <li><a href="/contact/contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
