feat: Actualizació definitiva

--- a/alojamientos.html
+++ b/alojamientos.html
@@ -20,7 +20,7 @@
                     <li><a href="/index.html" class="active">Inicio</a></li>
                     <li><a href="/alojamientos">Alojamientos</a></li>
                     <li><a href="/Experiencias">Experiencias</a></li>
-                    <li><a href="/contact">Contacto</a></li>
+                    <li><a href="/contact.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
