--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - El Paraíso</title>
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/contact.css">
 </head>
 <body>
     <header class="header">
@@ -19,7 +20,7 @@
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/alojamientos.html">Alojamientos</a></li>
                     <li><a href="/experiencias">Experiencias</a></li>
-                    <li><a href="/contact/contact.html" class="active">Contacto</a></li>
+                    <li><a href="/contact.html" class="active">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -121,7 +122,7 @@
                         <li><a href="/index.html">Inicio</a></li>
                         <li><a href="/alojamientos.html">Alojamientos</a></li>
                         <li><a href="/experiencias">Experiencias</a></li>
-                        <li><a href="/contact/contact.html">Contacto</a></li>
+                        <li><a href="/contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
@@ -134,6 +135,7 @@
                 <p>&copy; 2025 El Paraíso. Todos los derechos reservados.</p>
             </div>
         </div>
+        <script src="/js/contact.js"></script>
     </footer>
 </body>
 </html>
