--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li><a href="/index.html">Inicio</a></li>
                         <li><a href="/alojamientos.html">Alojamientos</a></li>
                         <li><a href="/Experiencias">Experiencias</a></li>
-                        <li><a href="/contact/contact.html">Contacto</a></li>
+                        <li><a href="/contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
