--- a/alojamientos.html
+++ b/alojamientos.html
@@ -17,8 +17,8 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/index.html" class="active">Inicio</a></li>
-                    <li><a href="/alojamientos">Alojamientos</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/alojamientos" class="active">Alojamientos</a></li>
                     <li><a href="/Experiencias">Experiencias</a></li>
                     <li><a href="/contact.html">Contacto</a></li>
                 </ul>
@@ -65,8 +65,7 @@
                 </div>
                 
                 <div class="form-group checkbox-group">
-                    <label for="disponible">Disponible</label>
-                    <input type="checkbox" id="disponible" checked>
+                 <label for="disponible">Disponible<input type="checkbox" id="disponible" checked></label>
                 </div>
 
                 <div class="form-group">
